# GRIG

./: README.md  pyproject.toml
grig/: __init__.py  diary.py  image.py  main.py  summary.py
