[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "grig"
version = "0.0.1"
description = "GRim Diary"
readme = "README.md"
requires-python = "==3.10.*"
authors = [
  {name = "Jingun Hong", email = "jingun.hong@gmail.com"}
]

dependencies = [
  "python-dotenv",
  "openai",
  "streamlit",
  "langchain",
]

[projects.urls]
source = "https://github.com/JingunSnack/GRIG"

[project.optional-dependencies]
dev = [
  "notebook",
]

[tool.setuptools]
packages = ["grig"]

[tool.black]
line-length = 100
